# tokemak-quant-project

./: README.md  aggregated_curve_fees_daily.csv  block_numbers.csv  curve_daily_volume.csv  curve_token_exchange_logs.csv  mav_lp_value.csv  mavrick_swap_logs.csv  normalized_lp_values_last_30_days.csv  pyproject.toml
data/: curve_fee_for_each_swap.csv  curve_lp_value.csv  curve_reserves.csv  curve_reserves_daily.csv  mav_reserves.csv  mav_reserves_daily.csv  normalized_lp_values_last_90_days.csv
tokemak_quant_project/: aggregateCurveDailyFee.py  calculateCurveFeePerSwap.py  calculateCurveLpValue.py  calculateMavLpValue.py  example.py  getBlockNumbers.py  getCurveReserve.py  getCurveReserveDaily.py  getMavrickReserve.py  getMavrickReserveDaily.py  getTradeLogsFromCurve.py  getTradeLogsFromMavrick.py  lpValueOutput.py  volumeCurve.py
